RESOLVED FIXED127950
Part 2: REGRESSION: JavascriptCore crash during OS Installation (due to Heap::m_operationInProgress ASSERT vs DelayedReleaseScope)
https://bugs.webkit.org/show_bug.cgi?id=127950
Summary Part 2: REGRESSION: JavascriptCore crash during OS Installation (due to Heap:...
Geoffrey Garen
Reported 2014-01-30 14:21:02 PST
Part 2: REGRESSION: JavascriptCore crash during OS Installation (due to Heap::m_operationInProgress ASSERT vs DelayedReleaseScope)
Attachments
Patch (1.81 KB, patch)
2014-01-30 14:24 PST, Geoffrey Garen
mhahnenberg: review+
Geoffrey Garen
Comment 1 2014-01-30 14:24:57 PST
Mark Hahnenberg
Comment 2 2014-01-30 14:27:41 PST
Comment on attachment 222735 [details] Patch r=me
Geoffrey Garen
Comment 3 2014-01-30 14:32:29 PST
Brent Fulgham
Comment 4 2022-02-12 20:01:00 PST
*** Bug 127513 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.