Part 2: REGRESSION: JavascriptCore crash during OS Installation (due to Heap::m_operationInProgress ASSERT vs DelayedReleaseScope) https://bugs.webkit.org/show_bug.cgi?id=127950

Reviewed by Mark Hahnenberg.

Scope the APICallbackShim to make sure that we re-acquire the lock
before putting the heap back into the "unsafe to allocate" state.
Otherwise, the heap will seem to be in the "unsafe to allocate" state
during any GC that happens before we re-acquire the lock.

No regression test because threads.

* heap/DelayedReleaseScope.h:
(JSC::DelayedReleaseScope::~DelayedReleaseScope):


Canonical link: https://commits.webkit.org/145940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163115 268f45cc-cd09-0410-ab3c-d52691b4dbfc